# opentextembeddings

./: .gitignore  Dockerfile  LICENSE  README.md  depot.json  pyproject.toml
.github/workflows/: build_container.yaml
scripts/: bulk_test.py  load_models.py  start.sh  test.sh
site/: highlight.min.js  index.html
src/: db.py  embed.py  limit.py  main.py  model.py
tests/: embed_string.http-request  test.py  test.sh
